[gd_scene load_steps=3 format=3 uid="uid://cdqh632q3q2qt"]

[ext_resource type="Script" uid="uid://0t7dt1v5huxu" path="res://scripts/hud_scene.gd" id="1_efote"]
[ext_resource type="Texture2D" uid="uid://ck3wgjsmypfrh" path="res://assets/hud_pipes/pipe_corner_top_right.tres" id="1_k5de2"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_efote")

[node name="TextureRectPipe1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1216.0
offset_top = 224.0
offset_right = 1280.0
offset_bottom = 288.0
texture = ExtResource("1_k5de2")

[node name="TextureRectPipe2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1216.0
offset_top = 152.0
offset_right = 1280.0
offset_bottom = 216.0
texture = ExtResource("1_k5de2")

[node name="TextureRectPipe3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1216.0
offset_top = 80.0
offset_right = 1280.0
offset_bottom = 144.0
texture = ExtResource("1_k5de2")
